k8s/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: playson-dev
  labels:
    app: httpbin
spec:
  replicas: 3 
  
  selector:
    matchLabels:
      app: httpbin
  
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: httpbin
              topologyKey: kubernetes.io/hostname
      
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          
          livenessProbe:
            httpGet:
              path: /status/200
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          
          readinessProbe:
            httpGet:
              path: /status/200
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
