k8s/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: playson-dev
  labels:
    app: httpbin
spec:
  type: ClusterIP 
  
  selector:
    app: httpbin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
