k8s/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  namespace: playson-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    
    alb.ingress.kubernetes.io/security-groups: sg-054801b9ffa7920b8
    
    alb.ingress.kubernetes.io/healthcheck-path: /status/200
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    
    alb.ingress.kubernetes.io/tags: Environment=development,Application=httpbin,ManagedBy=kubernetes

spec:
  ingressClassName: alb
  
  rules:
    - host: "httpbin.playson-tka.int"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
